name:                morse
version:             0.1.0.0
synopsis:            A morse translator in Haskell!
homepage:            https://github.com/kutyel/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Flavio Corpa
maintainer:          flaviocorpa@gmail.com
copyright:           Copyright © 2019 Flavio Corpa
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Morse
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , morse
                     , QuickCheck

test-suite tests
  hs-source-dirs:      tests
  main-is:             Spec.hs
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , morse
                     , QuickCheck
                     